<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.travelguide.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_image_height"
            android:scaleType="centerCrop"
            android:src="@drawable/travel_guide" />

        <TextView
            style="@style/TitleStyle"
            android:layout_marginTop="8dp"
            android:text="@string/title"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            style="@style/TitleStyle"
            android:layout_marginBottom="@dimen/little_title_marginBottom"
            android:layout_marginTop="@dimen/little_title_marginTop"
            android:text="@string/little_title"
            android:textSize="@dimen/little_title_text_size" />


        <!--the textView button bellow-->
        <TextView
            android:id="@+id/hotel_button"
            style="@style/MainScreenButton"
            android:background="@drawable/hotelclick"
            android:text="@string/hotel" />

        <TextView
            android:id="@+id/attraction_button"
            style="@style/MainScreenButton"
            android:background="@drawable/attractionclick"
            android:text="@string/attraction" />

        <TextView
            android:id="@+id/shopping_button"
            style="@style/MainScreenButton"
            android:background="@drawable/shoppingclick"
            android:text="@string/shopping" />

        <TextView
            android:id="@+id/food_button"
            style="@style/MainScreenButton"
            android:background="@drawable/foodclick"
            android:text="@string/food" />

    </LinearLayout>
</ScrollView>